--- a/src/main/resources/web/xld-ts-explorer/index.html
+++ b/src/main/resources/web/xld-ts-explorer/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="index"></div>
-  <script src="./typeSystemData.js"></script>
+  <script src="./config.js"></script>
   <script src="./bundledOutputs/typeSystem.js"></script>
 </body>
 </html>
