--- a/src/main/resources/web/xld-ts-explorer/index.html
+++ b/src/main/resources/web/xld-ts-explorer/index.html
@@ -5,7 +5,7 @@
   <title>Type System Explorer</title>
 </head>
 <body>
-  <div id="index"></div>
+  <div id="ts-explorer"></div>
   <script src="./config.js"></script>
   <script src="./bundledOutputs/typeSystem.js"></script>
 </body>
