--- a/src/main/resources/web/xld-ts-explorer/index.html
+++ b/src/main/resources/web/xld-ts-explorer/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Type System Explorer</title>
+    <meta charset="UTF-8">
+    <title>XLD UI Plugin to explore Type System</title>
 </head>
 <body>
-  <div id="ts-explorer"></div>
-  <script src="./config.js"></script>
-  <script src="./bundledOutputs/typeSystem.js"></script>
+<div id="ts-explorer"></div>
+<script src="./config.js"></script>
+<script src="./bundledOutputs/typeSystem.js"></script>
 </body>
 </html>
