--- a/src/main/resources/web/xld-ts-explorer/index.html
+++ b/src/main/resources/web/xld-ts-explorer/index.html
@@ -7,6 +7,5 @@
 <body>
 <div id="ts-explorer"></div>
 <script src="./config.js"></script>
-<script src="./bundledOutputs/typeSystem.js"></script>
-</body>
+<script type="text/javascript" src="typeSystem-7e00602800d5e3109d3a.js"></script></body>
 </html>
