Changed a dependency from ts-explorer to type-system-explorer

--- a/src/main/resources/web/xld-ts-explorer/index.html
+++ b/src/main/resources/web/xld-ts-explorer/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>XLD UI Plugin to explore Type System</title>
+    <meta charset="utf-8">
+    <title>XLD UI Plugin to explorer type system</title>
+    <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-<div id="ts-explorer"></div>
-<script src="./config.js"></script>
-<script type="text/javascript" src="typeSystem-7e00602800d5e3109d3a.js"></script></body>
+<div id="app"></div>
+<script type="text/javascript" src="app.js"></script></body>
 </html>
