--- a/src/main/resources/web/xld-ts-explorer/index.html
+++ b/src/main/resources/web/xld-ts-explorer/index.html
@@ -7,5 +7,5 @@
 </head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="app.js"></script></body>
+<script type="text/javascript" src="app-4af96d56bf16696a9b9a.js"></script></body>
 </html>
